--- a/style.css
+++ b/style.css
@@ -3,8 +3,23 @@
     --grid-rows: 1;
 }
 
+button{
+    width: 259px;
+    height: 75px;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.btn-container{
+    display: flex;
+    flex-direction: column;
+    margin-left: 150px;
+    padding: 100px 0px;
+    justify-content: space-between;
+}
 
 body{
+    background-image: linear-gradient(rgb(255, 0, 0),white,red);
     margin: 0;
     padding: 0;
     display: flex;
@@ -13,6 +28,9 @@ body{
     height: 100vh;
 }
 .container{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: white;
     display: grid;
     height: 900px;
     width: 900px;;
@@ -22,6 +40,6 @@ body{
     grid-template-rows: repeat(var(--grid-rows),1fr);
 }
 
-.grid-item{
+.box{
     border: 1px black solid;
 }
